fix: Resolved broken UI on low-res devices as mentioned in the feedback

--- a/css/styles.css
+++ b/css/styles.css
@@ -313,6 +313,12 @@ nav h1 a {
     display: block;
     font-size: inherit;
   }
+  #restaurants-list {
+    padding: 30px 0px;
+  }
+  #restaurants-list li {
+    width: calc(100% - 40px);
+  }
 }
 @media screen and (min-width: 601px) {
   #restaurants-list li {
